# task-tracker

./: .env.template  .env.test  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: code-checks.yaml
cdk/: README.md  app.py
cdk/infra/: infra_stack.py
cdk/tests/unit/: test_infra_stack.py
src/: main.py  run.py
src/task_tracker/: config.py  db.py  fastapi_utils.py  logger.py  router.py
src/task_tracker/contract/: README.md  spec.py  spec.yaml
src/task_tracker/ping/: router.py
src/task_tracker/v1/: router.py
src/task_tracker/v1/tasks/: router.py
tests/: conftest.py
tests/integration/: test_create_task.py  test_delete_task_by_id.py  test_get_all_tasks.py  test_get_task_by_id.py  test_update_task_by_id.py
tests/mocks/: tasks.py
tests/unit/: test_api.py  test_db.py
